# bridgerules

pb/: alphabridge.proto
python/: game.py  game_test.py  lin.py  players.py  tokens.py
python/fastgame/: PLAN  __init__.py  fastgame.c  optimization_log.md  py2c.sed  setup.py  wrapper.py  wrapper_test.py
rust/: .gitignore  BUILD.bazel  Cargo.toml  README.md  pyproject.toml  wrapper_test.py
rust/src/: lib.rs  lin.rs
