load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test", "rust_clippy")

rust_binary(
	name = "game",
	srcs = glob(["**/*.rs"]),
	aliases = aliases(),
	deps = all_crate_deps(),
	proc_macro_deps = all_crate_deps(proc_macro = True),
	visibility = [ "//visibility:public" ],
)

#rust_test(
#    name = "unit_test",
#    crate = ":game",
#    deps = all_crate_deps(normal_dev = True),
#    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
#)

#rust_clippy(
#name = "clippy",
#testonly = True,
#)
