[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-derived = "0.8.2"
enum-iterator = "1.4.1"
rand = "0.8.5"
rand_derive = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
pyo3 = "0.20.0"
thiserror = "1.0.51"

[dev-dependencies]
test-case = "3.3.1"
serde_test = "1.0.176"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# unwrap_used = "warn"
# indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"

[lib]
name = "game"
crate-type = ["cdylib"]
